--- a/assets/styles/flexslider.css
+++ b/assets/styles/flexslider.css
@@ -240,7 +240,7 @@ html[xmlns] .flexslider .slides {
 	margin:0;
 }
 .flex-control-thumbs img {
-  width: 100%;
+/*  width: 100%;*/
   height: auto;
   display: block;
   opacity: .7;
